refact : change collect into toList() for unmodifiable